--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -58,7 +58,11 @@
 	<div class="main-module">
 		<div class="head"><h2>摄影频道</h2></div>
 		<div class="body">
-
+            <ul>
+                <li><a href="/photography/collection">相册</li>
+                <li><a href="/photography">相机</li>
+                <li><a href="/photography">镜头</li>
+            </ul>
             <div class="divider solid"></div>
             <div class="foot-links"><?php echo Phalcon\Tag::linkTo("photography", "我是摄影爱好者"); ?></div>
 	   	</div>
@@ -69,7 +73,11 @@
 	<div class="main-module">
 		<div class="head"><h2>户外运动</h2></div>
 		<div class="body">
-
+            <ul>
+                <li><a href="/outdoor/activity">活动召集</li>
+                <li><a href="/outdoor/hiking">徒步</li>
+                <li><a href="/outdoor/activity/category/cycling">自行车活动</li>
+            </ul>
             <div class="divider solid"></div>
             <div class="foot-links"><?php echo Phalcon\Tag::linkTo("outdoor", "我是户外运动爱好者"); ?></div>
 	   	</div>
@@ -80,6 +88,11 @@
 	<div class="main-module">
 		<div class="head"><h2>业余无线电</h2></div>
 		<div class="body">
+            <ul>
+                <li><a href="/radio/repeater">全国中继台</li>
+                <li><a href="/radio/logging">通联日志</li>
+                <li><a href="/radio/net">台网活动</li>
+            </ul>
             <div class="divider solid"></div>
             <div class="foot-links"><?php echo Phalcon\Tag::linkTo("radio", "我是业余无线电爱好者"); ?></div>
 	   	</div>
