json & soap debug tools

--- a/app/technology/views/sidebar.phtml
+++ b/app/technology/views/sidebar.phtml
@@ -3,7 +3,7 @@
 	<div class="body">
 		<ul>
 			<li><a href="/technology/utility/ip">IP归属地查询</a></li>
-			<li><a href="/technology/utility/myip">我的IP地址</a></li>      
+			<li><a href="/technology/utility/myip">我的IP地址</a></li>
 			<li><a href="/technology/utility/crypt">crypt 加密</a></li>
 			<li><a href="/technology/utility/md5">md5 数字摘要</a></li>
 			<li><a href="/technology/utility/sha1">sha1 数字摘要</a></li>
@@ -11,6 +11,8 @@
 			<li><a href="/technology/utility/base64">BASE64 编码/解码</a></li>
             <li><a href="/technology/utility/crc32">CRC32 校验</a></li>
             <li><a href="/technology/utility/usbkey">USB Key 检查</a></li>
+            <li><a href="/technology/utility/soap">SOAP Debug Tools</a></li>
+            <li><a href="/technology/utility/json">JSON Debug Tools</a></li>
 		</ul>
 		<div class="divider solid"></div>
 		<div class="foot-links"><a href=""></a></div>
