--- a/app/technology/views/utility/usbkey.phtml
+++ b/app/technology/views/utility/usbkey.phtml
@@ -13,12 +13,12 @@
     <p>
        <?php echo Tag::submitButton("Read") ?>
     </p>
-
+    <p>该功只能运行在IE浏览器上</p>
     </form>
-    
+
 <OBJECT classid="clsid:C7672410-309E-4318-8B34-016EE77D6B58" id="ePass" name ="ePass" STYLE="LEFT: 0px; TOP: 0px" width="0" height="0" codebase="/webinst/files/install.cab"></OBJECT>
 <script type="text/javascript">
-try{ 
+try{
     var ukey = document.getElementById('ukey');
     var ePass = document.getElementById('ePass');
     ePass.OpenDevice(1,"");
@@ -30,7 +30,7 @@ catch(e){
     alert("请插入U盾");
 }
 </script>
-    
-    
+
+
     </div>
-</div>  
+</div>
