--- a/app/outdoor/views/layouts/cycling.phtml
+++ b/app/outdoor/views/layouts/cycling.phtml
@@ -7,32 +7,44 @@
     </div>
     <div class="sideWrap">
         <div class="side-module">
-            <div class="head"><h2> </h2></div>
+            <div class="head"><h2>Shimano 禧玛诺</h2></div>
             <div class="body">
-
+                <ul>
+                    <li><a href="">Deore</a>
+                    <li><a href="">Deore LX</a>
+                    <li><a href="">Deore SLX</a>
+                    <li><a href="">Deore XT</a>
+                    <li><a href="">Deore XTR</a>
+                </ul>
                 <div class="divider solid"></div>
                 <div class="foot-links"></div>
             </div>
             <div class="foot"></div>
-        </div>       
-        
-        <div class="side-module">
-            <div class="head"><h2></h2></div>
-            <div class="body">
+        </div>
 
+        <div class="side-module">
+            <div class="head"><h2>sram 速联</h2></div>
+            <div class="body">
+                <ul>
+                    <li><a href="">SRAM XX</a>
+                    <li><a href="">SRAM X9</a>
+                    <li><a href="">SRAM X7</a>
+                    <li><a href=""></a>
+                    <li><a href=""></a>
+                </ul>
                 <div class="divider solid"></div>
                 <div class="foot-links"></div>
             </div>
             <div class="foot"></div>
-        </div>    
-        
+        </div>
+
         <div class="side-module">
-            <div class="head"><h2></h2></div>
+            <div class="head"><h2>自行车品牌</h2></div>
 
                 <div class="divider solid"></div>
                 <div class="foot-links"><a href=""></a></div>
             </div>
             <div class="foot"></div>
-        </div>            
+        </div>
     </div>
 </div>
