--- a/app/radio/views/profile/callsign.phtml
+++ b/app/radio/views/profile/callsign.phtml
@@ -1,22 +1,24 @@
 <?php use Phalcon\Tag; ?>
     <div class="main-module">
         <div class="head"><h2>呼号管理</h2></div>
-        <div class="body"> 
+        <div class="body">
 
         <table>
            <thead>
                <th>callsign</th>
                <th>description</th>
+               <th></th>
            </thead>
            <tbody>
                <?php foreach($callsigns as $callsign){ ?>
                <tr>
                    <td><a href="/radio/index/qrz/<?php echo $callsign->callsign ?>"><?php echo $callsign->callsign ?></td>
                    <td><?php echo $callsign->description ?></td>
+                   <td><a href="/radio/profile/callsign?id=<?php echo $callsign->_id ?>&op=delete">删除</a></td>
                </tr>
                <?php }?>
            </tbody>
-        </table>                
+        </table>
 
         </div>
         <div class=foot></div>
@@ -24,7 +26,7 @@
 
 
     <div class="side-module">
-        <div class="head"><h2>下列地址仅用于邮寄QSL卡片</h2></div>
+        <div class="head"><h2>新增呼号</h2></div>
         <div class="body">
        <?php /*
         if($callsign)
@@ -53,7 +55,7 @@
             </td>
           </tr>
         </table>
-        </form>                
+        </form>
         </div>
         <div class="foot"></div>
     </div>
