--- a/app/technology/views/sidebar.phtml
+++ b/app/technology/views/sidebar.phtml
@@ -10,7 +10,7 @@
 			<li><a href="/technology/utility/url">URL 编码/解码</a></li>
 			<li><a href="/technology/utility/base64">BASE64 编码/解码</a></li>
             <li><a href="/technology/utility/crc32">CRC32 校验</a></li>
-            <li><a href="/technology/utility/usbkey">USB Key 检查</a></li>
+            <li><a href="/technology/utility/usbtoken">USB Token Tools</a></li>
             <li><a href="/technology/utility/soap">SOAP Debug Tools</a></li>
             <li><a href="/technology/utility/json">JSON Debug Tools</a></li>
 		</ul>
