hash_hmac.phtml

--- a/app/technology/views/sidebar.phtml
+++ b/app/technology/views/sidebar.phtml
@@ -13,6 +13,8 @@
             <li><a href="/technology/utility/usbtoken">USB Token Tools</a></li>
             <li><a href="/technology/utility/soap">SOAP Debug Tools</a></li>
             <li><a href="/technology/utility/json">JSON Debug Tools</a></li>
+            <li><a href="/technology/utility/hash_hmac">hash_hmac</a></li>
+            <li><a href="/technology/utility/uniqid">uniqid</a></li>
 		</ul>
 		<div class="divider solid"></div>
 		<div class="foot-links"><a href=""></a></div>
